<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/prime" >

    <data>
         </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/find_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="332dp"
            android:background="@android:drawable/alert_dark_frame"
            android:gravity="center"
            android:text="@string/find1"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/binarybutton"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="113dp"
            android:layout_marginLeft="113dp"
            android:layout_marginRight="113dp"
            android:layout_marginStart="113dp"
            android:layout_marginTop="228dp"
            android:gravity="center"
            android:text="@string/binary"
            app:layout_constraintBottom_toTopOf="@+id/find_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/number_Text"
            android:layout_width="367dp"
            android:layout_height="48dp"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="11dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="11dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_a_number"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toTopOf="@+id/binarybutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

    </android.support.constraint.ConstraintLayout>


</layout>