<?xml version="1.0" encoding="utf-8"?>

 <layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/homescreen"
    tools:context=".ViewModel.HomePage">

    <data>

    </data>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="463dp"
        android:layout_marginEnd="123dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="123dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="158dp"
        android:gravity="center"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/primebutton"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginBottom="139dp"
        android:layout_marginEnd="96dp"
        android:layout_marginLeft="102dp"
        android:layout_marginRight="96dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/primenumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addbutton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="379dp"
        android:layout_height="34dp"
        android:layout_marginBottom="171dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/add_or_search_elements_in_array"
        app:layout_constraintBottom_toTopOf="@+id/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginBottom="117dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="123dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="158dp"
        android:gravity="center"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/primebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addbutton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="383dp"
        android:layout_height="46dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/searchbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</android.support.constraint.ConstraintLayout>

</layout>
